<resources>
    <string name="app_name">Tabs_test</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="contact">Contact</string>
    <string name="DOB">DOB</string>
    <string name="signup">SignUp</string>
    <string name="Male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="Password">Enter_password</string>
    <string name="add_a_child">add_a_child</string>
    <string name="Enter_username">Enter_username</string>
    <string name="enter_password">Enter_password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="male" />
    <string name="title_activity_parents">ParentsActivity</string>
</resources>
